--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,3 +1,4 @@
 // Import Bootstrap and its default variables
 @import "~bootstrap/scss/bootstrap.scss";
 @import "./spinner.scss";
+@import "./style.scss";
